# satellite_tools

./: .gitignore  LICANCE  README.md  pyproject.toml
ael_satellite_tools/preprocess/: Himawari.py
example/: himawari_integrated.py  himawari_plot.py  himawari_preprocess.py  main.py  week6_cloudsat_filtering_file_list.py  week6_cloudsat_pyhdf_read.py  week6_cloudsat_read_data.py  week9_ro_preprocess.py
src/: main.py
src/satellite_preprocess/: Himawari.py
